--- a/app/views/invitation_mailer/invite_member.html.erb
+++ b/app/views/invitation_mailer/invite_member.html.erb
@@ -1,5 +1,44 @@
-<h1><%= @sender_full_name %> has invited you to join their team on Cadence</h1>
-<p>Click below to accept the invitation</p>
-<p>
-    <a href="<%= @claim_token_url %>" style="padding: 15px; border-radius: 5px; font-weight: 600; text-decoration: none; color: #ffffff; background: #2563eb">Join Team</a>
-</p>
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
+	<tr>
+		<td align="center">
+			<img src="https://cadence-test.s3.amazonaws.com/Cadence.png" width="300px" style="padding-top: 20px; padding-bottom: 20px;"/>
+			<table width="400px">
+				<tr>
+					<td>
+
+						<p>
+							<b>
+								<div style="padding-bottom: 8px">Hi <%= @invitation.email %>,</div>
+							</b> 
+							<br/>
+							
+							<div style="line-height: 1.6; padding-bottom: 12px;">
+								<b><%= @sender_full_name %></b> has invited you to join their team on <b>Cadence</b>.	
+								Click below to accept the invitation
+							</div>
+
+						</p>
+						<p>
+							<a
+							href="<%= @claim_token_url %>"
+							style="
+								padding: 9px 15px;
+								border-radius: 5px;
+								font-weight: 600;
+								text-decoration: none;
+								color: #ffffff;
+								background: #2563eb;
+								display: inline-block;
+								width: 100%;
+								text-align: center;
+							"
+							target="_blank"
+							>Join Team</a
+							>
+						</p>
+				</tr>
+			</td>
+			</table>
+		</td>
+	</tr>
+</table>
