--- a/app/views/feedback_mailer/feedback_submitted.html.erb
+++ b/app/views/feedback_mailer/feedback_submitted.html.erb
@@ -17,5 +17,5 @@
 </p>
 
 <p>
-    Time: <%= Time.now %>
+    Time: <%= Time.current.in_time_zone('America/New_York').strftime('%a %b %e %Y %I:%M %p') %>
 </p>
