Updated reset password email

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,4 +1,4 @@
-<p><%= t(:hello).capitalize %> <%= @resource.email %>!</p>
+<p>Hi <%= @resource.email %>!</p>
 
 <p><%= t '.request_reset_link_msg' %></p>
 
